--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "practicing-map",
+  "name": "mapbox-training",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +11,7 @@
     "mapbox-gl": "^1.12.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
